# dynamic-tictactoe

./: README.md  package-lock.json  package.json
TicTacToeServer/: CMakeLists.txt
TicTacToeServer/include/: Game.hpp  Session.hpp  SessionHandler.hpp
TicTacToeServer/src/: Session.cpp  SessionHandler.cpp  server.cpp
src/: index.css  main.jsx
src/components/: ActionButton.jsx  BackButton.jsx  Block.jsx  Board.jsx  InputField.jsx  JoinGame.jsx  PlayersTable.jsx  Waiting.jsx
src/pages/: Tictactoe.jsx
